<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BCase</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc_short">Descripción Corta</string>
    <string name="desc_long">Descripción Larga</string>
    <string name="heading">Nombre de archivo</string>
    <string name="title">Título</string>
    <string name="theme">Tema</string>
    <string name="aim">Objetivo</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_cancel">Cerrar</string>
    <string name="lv_title">Title</string>
    <string name="intro_hint">Introducción</string>
    <string name="conclusion">Conclusiones</string>
    <string name="con_recomendes"> Recomendaciones</string>
    <string name="summay_ejec">Sumario ejecutivo</string>
    <string name="supuestos_hint">Cuantos Supuestos va a utilizer? </string>
    <string name="alcances_element">Que elementos v a utilizer ? </string>
    <string name="btn_add">\u0020 + \u0020</string>
    <string name="btn_delete">\u0020 - \u0020</string>
    <string name="add_row">Agregar variable:</string>
    <string name="delete_row">Delete row:</string>
    <string name="alcances_title">Alcances y Límites</string>
    <string name="help_section">Business Case Help section</string>
    <string name="esquema_general">Esquema General</string>
    <string name="beneficous_financeros">Beneficios Financieros:</string>

    <!-- Alcances y liments ediitext title -->
    <string name="tiempo">Tiempo</string>
    <string name="capacidad">Capacidad instalada</string>
    <string name="horarios">Horarios de operacion</string>
    <string name="cobertura">Cobertura geografic</string>
    <string name="productos">Productos y servicios a comercializar</string>
    <string name="moneda">Moneda</string>
    <string name="distribucion">Distribución</string>
    <string name="almacenamiento">Almacenamiento</string>
    <string name="edificaciones">Edificaciones</string>
    <string name="capital">Capital Requerido</string>
    <string name="otro1">Otro1</string>
    <string name="otro2">Otro2</string>
    <string name="otro3">Otro3</string>
    <string name="varaiable">Variables</string>
    <string name="valor">Valor</string>

    <!-- string text for inner dailoge -->
    <string name="open">Open</string>
    <string name="delete_file">Delete</string>
    <string name="title_activity_faq">FAQActivity</string>
    <string name="title_activity_rocomienda">RocomiendaActivity</string>
    <string name="title_activity_review">ReviewActivity</string>

    <string name="Facebook_AppID">177870095671066</string>
</resources>
